force-app/main/default/objects/KimbleOne__DeliveryGroupBillingContact__c/KimbleOne__DeliveryGroupBillingContact__c.object-meta.xml
<CustomObject>
    <label>Delivery Group Billing Contact</label>
    <nameField>
        <label>DeliveryGroupBillingContact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delivery Group Billing Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>