force-app/main/default/objects/KimbleOne__DeliveryGroupBillingContact__c/fields/KimbleOne__Contact__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Delivery Group Billing Contacts</relationshipLabel>
    <relationshipName>DeliveryGroupBillingContacts</relationshipName>
    <type>Lookup</type>
</CustomField>