force-app/main/default/objects/KimbleOne__DeliveryGroupBillingContact__c/fields/KimbleOne__DeliveryGroup__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DeliveryGroup__c</fullName>
    <label>DeliveryGroup</label>
    <referenceTo>KimbleOne__DeliveryGroup__c</referenceTo>
    <relationshipLabel>Delivery Group Billing Contacts</relationshipLabel>
    <relationshipName>DeliveryGroupBillingContacts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>